@@ -1,7 +1,7 @@
 # Copyright (c) 2018 Patricio Cubillos and contributors.
 # puppies is open-source software under the MIT license (see LICENSE).
 
-__all__ = ['init', 'badpix', 'cen',
+__all__ = ['init', 'badpix', 'cen', 'phot',
            'stats', 'tools', 'io', 'image', 'center', 'photometry']
 
 # Import sub-packages:
@@ -14,6 +14,7 @@ from . import io
 from .driver import init
 from .pup_badpix import badpix
 from .pup_center import driver as cen
+from .pup_photom import driver as phot
 
 # Clean up top-level namespace--delete everything that isn't in __all__
 # or is a magic attribute, and that isn't a submodule of this package
